fixes headers on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -160,6 +160,10 @@ section.top-section > div {
 		margin: 0px;
 		text-align: left;
 
+		span {
+			display: inline-block;
+		}
+
 		span.no-break {
 			white-space: nowrap;
 		}
